--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
    <div id="project5-photos" style="display:none;">
     <h2>Project 5: Your Project Title</h2>
     <p>Description of Project 5 goes here...</p>
-    <img src="your_image1.jpg" alt="Project 5 Image 1" width="300">
+    <img src="IMG_2238.jpg" alt="Project 5 Image 1" width="300">
     <img src="your_image2.jpg" alt="Project 5 Image 2" width="300">
    </div>
 
