--- a/index.html
+++ b/index.html
@@ -147,10 +147,25 @@
     </div>
 
    <div id="project5-photos" style="display:none;">
-    <h2>Project 5: Your Project Title</h2>
+    <h2>Scavenger Hunt!!!</h2>
     <p>Description of Project 5 goes here...</p>
+    <h2>Scavenger Hunt!!!</h2>
+    <p>1. Evidence of design for navigation without one or more of the 5 senses</p>
     <img src="IMG_2238.jpg" alt="Project 5 Image 1" width="300">
+    <p>2. Evidence of design for forms of assistance, broadly defined</p>
     <img src="your_image2.jpg" alt="Project 5 Image 2" width="300">
+    <p>3. Evidence of design for aging, broadly defined</p>
+    <p>4. Evidence of design for young children</p>
+    <p>5. Evidence of design for wheeled mobile gear</p>
+    <p>6. Evidence of design with physical barriers</p>
+    <p>7. Evidence of design with a lack of information</p>
+    <p>8. Evidence of design with an absence of help</p>
+    <p>9. Evidence of design for historical specificity</p>
+    <p>10. Evidence of design for environmental sustainability</p>
+    <p>11. Evidence of design for health and well-being</p>
+    <p>12. Evidence of design for intercultural community building</p>
+
+
    </div>
 
     <script>
