--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <img src="your_image2.jpg" alt="Project 5 Image 2" width="300">
     <h2>3. Evidence of design for aging, broadly defined</h2>
     <h2>4. Evidence of design for young children</h2>
+    <img src="IMG_2240.jpg" alt="Project 5 Image 1" width="300">
     <h2>5. Evidence of design for wheeled mobile gear</h2>
     <h2>6. Evidence of design with physical barriers</h2>
     <h2>7. Evidence of design with a lack of information</h2>
