--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <h2>2. Evidence of design for forms of assistance, broadly defined</h2>
     <img src="your_image2.jpg" alt="Project 5 Image 2" width="300">
     <h2>3. Evidence of design for aging, broadly defined</h2>
+    <img src="IMG_2245.jpg" alt="Project 5 Image 1" width="300">
     <h2>4. Evidence of design for young children</h2>
     <p>As you can see this specific design of a water fountain was specifically designed for Accessibility for children. This water fountain has two heights, one for adults and another one deisgned especialy for children access.</p>
     <img src="IMG_2240.jpg" alt="Project 5 Image 1" width="300">
