--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <p>As you can see this specific design of a water fountain was specifically designed for Accessibility for children. This water fountain has two heights, one for adults and another one deisgned especialy for children access.</p>
     <img src="IMG_2240.jpg" alt="Project 5 Image 1" width="300">
     <h2>5. Evidence of design for wheeled mobile gear</h2>
+    <img src="IMG_2247.jpg" alt="Project 5 Image 1" width="300">
     <h2>6. Evidence of design with physical barriers</h2>
     <h2>7. Evidence of design with a lack of information</h2>
     <h2>8. Evidence of design with an absence of help</h2>
