--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <h2>5. Evidence of design for wheeled mobile gear</h2>
     <img src="IMG_2247.jpg" alt="Project 5 Image 1" width="300">
     <h2>6. Evidence of design with physical barriers</h2>
+     <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
     <h2>7. Evidence of design with a lack of information</h2>
     <h2>8. Evidence of design with an absence of help</h2>
     <h2>9. Evidence of design for historical specificity</h2>
