--- a/index.html
+++ b/index.html
@@ -164,11 +164,17 @@
     <h2>6. Evidence of design with physical barriers</h2>
      <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
     <h2>7. Evidence of design with a lack of information</h2>
+    <img src="IMG_2239.jpg" alt="Project 5 Image 1" width="300">
     <h2>8. Evidence of design with an absence of help</h2>
     <h2>9. Evidence of design for historical specificity</h2>
+     <img src="IMG_2254.jpg" alt="Project 5 Image 1" width="300">
     <h2>10. Evidence of design for environmental sustainability</h2>
+     <img src="IMG_2249.jpg" alt="Project 5 Image 1" width="300">
     <h2>11. Evidence of design for health and well-being</h2>
+     <img src="IMG_2241.jpg" alt="Project 5 Image 1" width="300">
     <h2>12. Evidence of design for intercultural community building</h2>
+    <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
+
 
 
    </div>
