--- a/index.html
+++ b/index.html
@@ -153,13 +153,14 @@
     <img src="IMG_2238.jpg" alt="Project 5 Image 1" width="300">
     <p>In the picture below we can see a navigation sign on a door that that underneeth it there is the navigation for the blind written in Braille language. This navigation sign allows blind people to navigate without using their eyesight. Also this navigation sign allows deaf people to use their eyesight and navigae.  </p>
     <h2>2. Evidence of design for forms of assistance, broadly defined</h2>
-    <img src="your_image2.jpg" alt="Project 5 Image 2" width="300">
+    <img src="IMG_2248.jpg" alt="Project 5 Image 2" width="300">
     <h2>3. Evidence of design for aging, broadly defined</h2>
     <img src="IMG_2245.jpg" alt="Project 5 Image 1" width="300">
     <h2>4. Evidence of design for young children</h2>
     <p>As you can see this specific design of a water fountain was specifically designed for Accessibility for children. This water fountain has two heights, one for adults and another one deisgned especialy for children access.</p>
     <img src="IMG_2240.jpg" alt="Project 5 Image 1" width="300">
     <h2>5. Evidence of design for wheeled mobile gear</h2>
+    <img src="IMG_2244.jpg" alt="Project 5 Image 1" width="300">
     <img src="IMG_2247.jpg" alt="Project 5 Image 1" width="300">
     <h2>6. Evidence of design with physical barriers</h2>
      <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
