--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
      <img src="IMG_2249.jpg" alt="Project 5 Image 1" width="300">
     <h2>11. Evidence of design for health and well-being</h2>
      <img src="IMG_2241.jpg" alt="Project 5 Image 1" width="300">
-    <h2>12. Evidence of design for intercultural community building</h2>
-    <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
+    <h2>12. Evidence of design for Transportation</h2>
+    <img src="IMG_2246.jpg" alt="Project 5 Image 1" width="300">
 
 
 
