--- a/index.html
+++ b/index.html
@@ -152,9 +152,11 @@
     <h2>1. Evidence of design for navigation without one or more of the 5 senses</h2>
      <p>In the picture below we can see a navigation sign on a door that that underneeth it there is the navigation for the blind written in Braille language. This navigation sign allows blind people to navigate without using their eyesight. Also this navigation sign allows deaf people to use their eyesight and navigae.  </p>
     <img src="IMG_2238.jpg" alt="Project 5 Image 1" width="300">
-    <h2>2. Evidence of design for forms of assistance, broadly defined</h2>
+    <h2>2. Evidence of design for forms of assistance</h2>
+     <p>As seen in the photo there is a blue colored, wheel chare elivator (lift) that is made  specifically for people with need that there are either in a wheel chair or other transportation needs. This design can be life changing as people that could not go up stairs now can.</p>
     <img src="IMG_2248.jpg" alt="Project 5 Image 2" width="300">
     <h2>3. Evidence of design for aging, broadly defined</h2>
+    <p>In the photo we can see stairs with a side banister that is designed for people that have access walking problems.This specifically design lets the person with the dissability to hang on it while walking down or up the stairs. This desin especially recognizes with seniors that use it often.  </p>
     <img src="IMG_2245.jpg" alt="Project 5 Image 1" width="300">
     <h2>4. Evidence of design for young children</h2>
     <p>As you can see this specific design of a water fountain was specifically designed for Accessibility for children. This water fountain has two heights, one for adults and another one deisgned especialy for children access.</p>
@@ -163,11 +165,14 @@
     <img src="IMG_2244.jpg" alt="Project 5 Image 1" width="300">
     <img src="IMG_2247.jpg" alt="Project 5 Image 1" width="300">
     <h2>6. Evidence of design with physical barriers</h2>
+    <p>In the photo we can see there is a staircase that is design with physical barrier: there is no access for wheelchairs nor for wheeld mobile geer such as carts, bikes and more. This shows us that the designers of this stairs did not pay attention to the needs of all diffrent people. </p>
      <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
     <h2>7. Evidence of design with a lack of information</h2>
+    <p>This photo was taking just outside the engineering lab. Till this moment we do not know what is this designed for. In my opinion it has somthing to do with the elivatior since it is right by it.</p>
     <img src="IMG_2239.jpg" alt="Project 5 Image 1" width="300">
     <h2>8. Evidence of design with an absence of help</h2>
     <h2>9. Evidence of design for historical specificity</h2>
+    <p>In the photo we can see a historical a shofar. A shofar is a traditional Jewish instrument made from a ram's horn, typically used during religious ceremonies and celebrations. The Shofar is designed this way as it can make a specific sound for the jewish ceremonies.</p>
      <img src="IMG_2254.jpg" alt="Project 5 Image 1" width="300">
     <h2>10. Evidence of design for environmental sustainability</h2>
      <img src="IMG_2249.jpg" alt="Project 5 Image 1" width="300">
