--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <p>In the photo we can see there is a staircase that is design with physical barrier: there is no access for wheelchairs nor for wheeld mobile geer such as carts, bikes and more. This shows us that the designers of this stairs did not pay attention to the needs of all diffrent people. </p>
      <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
     <h2>7. Evidence of design with a lack of information</h2>
-    <p>This photo was taking just outside the engineering lab. Till this moment we do not know what is this designed for. In my opinion it has somthing to do with the elivatior since it is right by it.</p>
+    <p>This photo was taken just outside the engineering lab. Till this moment we do not know what is this designed for. In my opinion it has somthing to do with the elivatior since it is right by it.</p>
     <img src="IMG_2239.jpg" alt="Project 5 Image 1" width="300">
     <h2>8. Evidence of design with an absence of help</h2>
     <h2>9. Evidence of design for historical specificity</h2>
