--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
     <h2>10. Evidence of design for environmental sustainability</h2>
      <img src="IMG_2249.jpg" alt="Project 5 Image 1" width="300">
     <h2>11. Evidence of design for health and well-being</h2>
+    <p>This Photo was taken in the science building near Abelson 131. In the photo we can see a emergency shower that incase of an emergency It’s designed to quickly rinse off any harmful substances that may come into contact with a person's skin or clothing, helping to prevent injury or chemical burns. In an emergency, a person can stand under the shower and pull a handle, releasing a large flow of water to wash off contaminants.</p>
      <img src="IMG_2241.jpg" alt="Project 5 Image 1" width="300">
     <h2>12. Evidence of design for Transportation</h2>
     <img src="IMG_2246.jpg" alt="Project 5 Image 1" width="300">
