--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
     <h2>11. Evidence of design for health and well-being</h2>
     <p>This Photo was taken in the science building near Abelson 131. In the photo we can see a emergency shower that incase of an emergency It’s designed to quickly rinse off any harmful substances that may come into contact with a person's skin or clothing, helping to prevent injury or chemical burns. In an emergency, a person can stand under the shower and pull a handle, releasing a large flow of water to wash off contaminants.</p>
      <img src="IMG_2241.jpg" alt="Project 5 Image 1" width="300">
-    <h2>12. Evidence of design for Transportation</h2>
+    <h2>12. Evidence of design for Transportation accessibility</h2>
+    <p>In the photo of an electric scooter that has a special seat attached to it. This special scooter is often called seated electric scooter, provides more comfort and stability for riders who prefer or need to sit rather than stand.</p>
     <img src="IMG_2246.jpg" alt="Project 5 Image 1" width="300">
 
 
