--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <p>In the photo we can see a historical a shofar. A shofar is a traditional Jewish instrument made from a ram's horn, typically used during religious ceremonies and celebrations. The Shofar is designed this way as it can make a specific sound for the jewish ceremonies.</p>
      <img src="IMG_2254.jpg" alt="Project 5 Image 1" width="300">
     <h2>10. Evidence of design for environmental sustainability</h2>
+    <p>In this Photo we can see a projector screen. Using a projector screen with a projector instead of multiple individual screens is a great example for environmental sustainability. Also when using a projector instead of a white board or chalkboard we are saving materials wasted and materials that have short life prodoct compared to the projector.</p>
      <img src="IMG_2249.jpg" alt="Project 5 Image 1" width="300">
     <h2>11. Evidence of design for health and well-being</h2>
     <p>This Photo was taken in the science building near Abelson 131. In the photo we can see a emergency shower that incase of an emergency It’s designed to quickly rinse off any harmful substances that may come into contact with a person's skin or clothing, helping to prevent injury or chemical burns. In an emergency, a person can stand under the shower and pull a handle, releasing a large flow of water to wash off contaminants.</p>
