--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <p>As you can see this specific design of a water fountain was specifically designed for Accessibility for children. This water fountain has two heights, one for adults and another one deisgned especialy for children access.</p>
     <img src="IMG_2240.jpg" alt="Project 5 Image 1" width="300">
     <h2>5. Evidence of design for wheeled mobile gear</h2>
+    <p>As we can see in the photo there is a bike parking. A bike parking lot is a clear example of design that caters specifically to wheeled, mobile gear like bicycles. Bike stands are designed to hold bikes upright, securing the wheels and frame to prevent form it getting stolen. </p>
     <img src="IMG_2244.jpg" alt="Project 5 Image 1" width="300">
     <img src="IMG_2247.jpg" alt="Project 5 Image 1" width="300">
     <h2>6. Evidence of design with physical barriers</h2>
