--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
             document.getElementById("new-photos").style.display = "none";
             document.getElementById("project3-photos").style.display = "none";
             document.getElementById("project4-photos").style.display = "none";
+                    document.getElementById("project5-photos").style.display = "none";
+
 
         }
 
@@ -203,6 +205,8 @@
             document.getElementById("new-photos").style.display = "block";
             document.getElementById("project3-photos").style.display = "none";
             document.getElementById("project4-photos").style.display = "none";
+                    document.getElementById("project5-photos").style.display = "none";
+
 
         }
 
@@ -211,6 +215,8 @@
             document.getElementById("new-photos").style.display = "none";
             document.getElementById("project3-photos").style.display = "block";
             document.getElementById("project4-photos").style.display = "none";
+                    document.getElementById("project5-photos").style.display = "none";
+
       }
 
         function showProject4Photos() {
@@ -218,6 +224,7 @@
             document.getElementById("new-photos").style.display = "none";
             document.getElementById("project3-photos").style.display = "none";
             document.getElementById("project4-photos").style.display = "block";
+                    document.getElementById("project5-photos").style.display = "none";
 
         }
 
