--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button onclick="showCurrentPhotos()" style="background-color: blue; color: white;">Project 1</button>
     <button onclick="showNewPhotos()" style="background-color: green; color: white;">Project 2</button>
     <button onclick="showProject3Photos()" style="background-color: orange; color: white;">Project 3</button>
-    <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4</button>
+    <button onclick="showProject4Photos()" style="background-color: purple; color: white;">Project 4 + Scavenger Hunt!</button>
     <button onclick="showProject5Photos()" style="background-color: purple; color: white;">Project 5</button>
 
 
@@ -144,10 +144,8 @@
         <p> e-NABLEhub-RecommendedDevices: https://hub.e-nable.org/p/devices</p>
         <p> Thekit weare using for parts: https://shop3duniverse.com/products/phoenix-hand-by-e-nable-assembly-materials-kit#v32622587858</p>
         <p>Book: WHO IS THE BUILT WORLD BUILT FOR? (ALBERT CAMUS) </p>
-    </div>
 
-   <div id="project5-photos" style="display:none;">
-    <h2>Scavenger Hunt!!!</h2>
+                <h2>Scavenger Hunt!!!</h2>
     <p>Description of goes here...</p>
     <h2>1. Evidence of design for navigation without one or more of the 5 senses</h2>
      <p>In the picture below we can see a navigation sign on a door that that underneeth it there is the navigation for the blind written in Braille language. This navigation sign allows blind people to navigate without using their eyesight. Also this navigation sign allows deaf people to use their eyesight and navigae.  </p>
@@ -184,6 +182,10 @@
     <p>In the photo of an electric scooter that has a special seat attached to it. This special scooter is often called seated electric scooter, provides more comfort and stability for riders who prefer or need to sit rather than stand.</p>
     <img src="IMG_2246.jpg" alt="Project 5 Image 1" width="300">
 
+
+    </div>
+
+   <div id="project5-photos" style="display:none;">
 
 
    </div>
