--- a/index.html
+++ b/index.html
@@ -161,14 +161,16 @@
     <img src="IMG_2240.jpg" alt="Project 5 Image 1" width="300">
     <h2>5. Evidence of design for wheeled mobile gear</h2>
     <p>As we can see in the photo there is a bike parking. A bike parking lot is a clear example of design that caters specifically to wheeled, mobile gear like bicycles. Bike stands are designed to hold bikes upright, securing the wheels and frame to prevent form it getting stolen. </p>
-    <img src="IMG_2244.jpg" alt="Project 5 Image 1" width="300">
+    <img src="IMG_2243.jpg" alt="Project 5 Image 1" width="300">
     <h2>6. Evidence of design with physical barriers</h2>
-    <p>In the photo we can see there is a staircase that is design with physical barrier: there is no access for wheelchairs nor for wheeld mobile geer such as carts, bikes and more. This shows us that the designers of this stairs did not pay attention to the needs of all diffrent people. </p>
+    <p>Description of goes here...</p>
      <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
     <h2>7. Evidence of design with a lack of information</h2>
     <p>This photo was taken just outside the engineering lab. Till this moment we do not know what is this designed for. In my opinion it has somthing to do with the elivatior since it is right by it.</p>
     <img src="IMG_2239.jpg" alt="Project 5 Image 1" width="300">
     <h2>8. Evidence of design with an absence of help</h2>
+     <p>In the photo we can see there is a staircase that is design with physical barrier: there is no access for wheelchairs nor for wheeld mobile geer such as carts, bikes and more. This shows us that the designers of this stairs did not pay attention to the needs of all diffrent people. </p>
+     <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">           
     <h2>9. Evidence of design for historical specificity</h2>
     <p>In the photo we can see a historical a shofar. A shofar is a traditional Jewish instrument made from a ram's horn, typically used during religious ceremonies and celebrations. The Shofar is designed this way as it can make a specific sound for the jewish ceremonies.</p>
      <img src="IMG_2254.jpg" alt="Project 5 Image 1" width="300">
