--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <p>As we can see in the photo there is a bike parking. A bike parking lot is a clear example of design that caters specifically to wheeled, mobile gear like bicycles. Bike stands are designed to hold bikes upright, securing the wheels and frame to prevent form it getting stolen. </p>
     <img src="IMG_2243.jpg" alt="Project 5 Image 1" width="300">
     <h2>6. Evidence of design with physical barriers</h2>
-    <p>Description of goes here...</p>
+    <p>In the photo we can see a button to press that helps people with accessibility need that automatically opens the door. The problem with this Button  is that people that have a visual dissability cannot see the button and will not be able to press it correctly. </p>
      <img src="IMG_2242.jpg" alt="Project 5 Image 1" width="300">
     <h2>7. Evidence of design with a lack of information</h2>
     <p>This photo was taken just outside the engineering lab. Till this moment we do not know what is this designed for. In my opinion it has somthing to do with the elivatior since it is right by it.</p>
